--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -14,6 +14,10 @@ SRC = main.c \
 	  swap.c\
 	  error_free.c\
 	  push_swap_util_aux.c\
+	  pos.c\
+	  array.c\
+	  push_swap.c\
+	  move_to_b.c\
 
 
 OBJ = $(SRC:.c=.o)
