--- a/phylo/Makefile
+++ b/phylo/Makefile
@@ -1,25 +1,31 @@
-NAME = philosopher
-CC = gcc -fsanitize=leak
+ROSE = \033[38;5;205m
+RESET = \033[0m
+
+NAME = philo
+CC = cc
 CFLAGS = -Wall -Wextra -Werror -pthread -g
 SRCS = main.c free_functions.c print_status.c error_functions.c initialisation.c executor.c parseing.c mutex_and_phtread_safety.c philosophers_routine_describe.c
 OBJS = $(SRCS:.c=.o)
-RM = rm -f
-LIBS = -lpthread
-.PHONY: all clean fclean re
+
 all: $(NAME)
+	@echo "$(ROSE)philo is ready !!! to use: ./philo <numbers of philos> <time to die> <time to eat> <time to sleep> [number of meals]$(RESET)" \
+	
+
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
+	@$(CC) $(CFLAGS) -o $@ $^
+
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+	@$(CC) $(CFLAGS) -c $< -o $@
+
 clean:
-	$(RM) $(OBJS)
+	@rm -f $(OBJS)
+		@echo "$(ROSE)GOOD BYE PHILO$(RESET)";
+
+
+
 fclean: clean
-	$(RM) $(NAME)
+	@rm -f $(NAME)
+
 re: fclean all
+
 .PHONY: all clean fclean re
-# This Makefile compiles a multi-threaded program that simulates philosophers eating.
-# It includes rules for building the executable, cleaning object files, and fully cleaning the build directory.
-# The program is built using GCC with specified flags for warnings and threading support.
-# The source files are compiled into object files, which are then linked to create the final executable.
-# The Makefile also includes phony targets to ensure that the commands are always executed.
-# The `all` target builds the executable, while `clean` removes object files, and `fclean` removes both object files and the executable.
