--- a/c++_module0/ex01/Makefile
+++ b/c++_module0/ex01/Makefile
@@ -1,5 +1,5 @@
-NAME = megaphone
-SRC = megaphone.cpp
+NAME = phonebook
+SRC = phonebook.cpp
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
