--- a/c++module01/ex01/Makefile
+++ b/c++module01/ex01/Makefile
@@ -1,5 +1,5 @@
-NAME = megaphone
-SRC = megaphone.cpp
+NAME = MoarBrainz!
+SRC = main.cpp Zombie.cpp zombieHorde.cpp
 OBJ = $(SRC:.cpp=.o)
 
 CXX = c++
