--- a/c++_module0/ex01/Makefile
+++ b/c++_module0/ex01/Makefile
@@ -1,7 +1,10 @@
 NAME = phonebook
 SRC = phonebook.cpp add.cpp search.cpp
+OBJ = $(SRC:.cpp=.o)
+
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+
 YELLOW := \033[1;33m
 RESET  := \033[0m
 
@@ -11,17 +14,24 @@ RM = rm -f
 
 all: $(NAME)
 
-$(NAME): $(SRC)
+$(NAME): $(OBJ)
 	@clear
 	@echo "$(YELLOW)Compiling...$(RESET)\n"
-	@$(CXX) $(CXXFLAGS) -o $(NAME) $(SRC)
+	@$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 	@echo "$(YELLOW)$(NAME) compiled$(RESET)"
+
+
+%.o: %.cpp
+	@$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
 	@echo "$(YELLOW)Cleaning...$(RESET)\n"
-	@$(RM) $(NAME)
+	@$(RM) $(OBJ)
 	@echo "$(YELLOW)All clean!$(RESET)"
 
 fclean: clean
+	@echo "$(YELLOW)Full cleaning...$(RESET)\n"
+	@$(RM) $(NAME)
+	@echo "$(YELLOW)Full clean!$(RESET)"
 
 re: fclean all
