--- a/C++/module04/ex01/Makefile
+++ b/C++/module04/ex01/Makefile
@@ -1,7 +1,7 @@
 .PHONY: all clean fclean re banner
 
 NAME = Animal
-SRC = main.cpp Animal.cpp Dog.cpp Cat.cpp WrongCat.cpp WrongAnimal.cpp
+SRC = main.cpp Animal.cpp Dog.cpp Cat.cpp WrongCat.cpp WrongAnimal.cpp Brain.cpp 
 OBJ = $(SRC:.cpp=.o)
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
