--- a/Inception/.env
+++ b/Inception/.env
@@ -1,16 +1,16 @@
 # MYSQL
+MYSQL_ROOT_PASSWORD=rootpass
 MYSQL_DATABASE=wordpress
-MYSQL_USER=wp_user
-MYSQL_PASSWORD=adre
-MYSQL_ROOT_PASSWORD=root_adre
+MYSQL_USER=csalamit
+MYSQL_PASSWORD=user
 
 # WORDPRESS
 WP_TITLE=Inception
 WP_ADMIN_USER=admin
-WP_ADMIN_PASSWORD=admin_adre
+WP_ADMIN_PASSWORD=user
 WP_ADMIN_EMAIL=admin@42.fr
 WP_USER=csalamit
-WP_USER_PASSWORD=user_password
+WP_USER_PASSWORD=user
 WP_USER_EMAIL=csalamit@42.fr
 
 # DOMAIN
