--- a/Inception/srcs/requirements/mariaDb/Dockerfile
+++ b/Inception/srcs/requirements/mariaDb/Dockerfile
@@ -1,14 +1,12 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y \
-    mariadb-server \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get install -y mariadb-server && \
+    rm -rf /var/lib/apt/lists/*
 
-COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/
-COPY tools/init_db.sh /usr/local/bin/
+COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY tools/init_db.sh /init_db.sh
 
-RUN chmod +x /usr/local/bin/init_db.sh
+RUN chmod +x /init_db.sh
 
-EXPOSE 3306
-
-ENTRYPOINT ["init_db.sh"]
+ENTRYPOINT ["/init_db.sh"]
