--- a/Inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/Inception/srcs/requirements/nginx/conf/nginx.conf
@@ -14,9 +14,24 @@ http {
         ssl_prefer_server_ciphers on;
 
         root /var/www/html;
-        index index.html;
+        index index.php index.html;
 
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
+
+        location / {
+            try_files $uri $uri/ /index.php?$args;
+        }
+
+        location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_pass wordpress:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        }
+
+        location ~ /\.ht {
+            deny all;
+        }
     }
 }
