--- a/Inception/srcs/requirements/wordPress/Dockerfile
+++ b/Inception/srcs/requirements/wordPress/Dockerfile
@@ -1,3 +1,18 @@
 FROM debian:bullseye
-RUN apt-get update && apt-get install -y php7.4 php7.4-fpm php7.4-mysql wget curl mariadb-client && rm -rf /var/lib/apt/lists/*
-CMD ["php-fpm7.4", "-F"]
+
+RUN apt-get update && apt-get install -y \
+    php7.4 \
+    php7.4-fpm \
+    php7.4-mysql \
+    curl \
+    mariadb-client \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN mkdir -p /run/php
+
+COPY tools/setup_wordpress.sh /setup_wordpress.sh
+RUN chmod +x /setup_wordpress.sh
+
+EXPOSE 9000
+
+CMD ["/setup_wordpress.sh"]
