testing inception as problem with databse

--- a/Inception/srcs/.env
+++ b/Inception/srcs/.env
@@ -3,15 +3,16 @@ MYSQL_ROOT_PASSWORD=rootpass
 MYSQL_DATABASE=wordpress
 MYSQL_USER=csalamit
 MYSQL_PASSWORD=user
+MYSQL_ADMIN=admin
+MYSQL_ADMIN_PASSWORD=user
+MYSQL_HOST=mariadb
 
 # WORDPRESS
-WP_TITLE=Inception
-WP_ADMIN_USER=admin
-WP_ADMIN_PASSWORD=user
+WP_TITLE="Inception csalamit"
+WP_URL=https://csalamit.42.fr
 WP_ADMIN_EMAIL=admin@42.fr
 WP_USER=csalamit
 WP_USER_PASSWORD=user
 WP_USER_EMAIL=csalamit@42.fr
-
-# DOMAIN
 DOMAIN_NAME=csalamit.42.fr
+WP_DEBUG=true
