--- a/Inception/srcs/.env
+++ b/Inception/srcs/.env
@@ -10,6 +10,8 @@ MYSQL_HOST=mariadb
 # WORDPRESS
 WP_TITLE="Inception csalamit"
 WP_URL=https://csalamit.42.fr
+WP_ADMIN_USER=admin
+WP_ADMIN_PASSWORD=user
 WP_ADMIN_EMAIL=admin@42.fr
 WP_USER=csalamit
 WP_USER_PASSWORD=user
