--- a/Inception/Makefile
+++ b/Inception/Makefile
@@ -5,20 +5,24 @@ all: up
 
 up: $(COMPOSE_FILE)
 	@echo "[i] Starting Inception..."
-	@sudo docker compose -f $(COMPOSE_FILE) up --build -d
-	@touch up
+	@echo "[i] Creating volumes..."
+	@mkdir -p ~/data/mariadb
+	@mkdir -p ~/data/wordpress
+# 	@sudo chmod 777 ~/data/mariadb
+# 	@chmod 777 ~/data/wordpress
+	@echo "[i] Bringing up Inception services..."
+	@docker compose -f $(COMPOSE_FILE) up --build -d
 	@echo "[i] Inception successfully up !"
 
 down:
 	@echo "[i] Stopping Inception..."
 	@sudo docker compose -f $(COMPOSE_FILE) down
-	@rm -f up
+
 
 clean:
 	@echo "[i] Cleaning Inception..."
 	@sudo docker compose -f $(COMPOSE_FILE) down -v --remove-orphans
 	@sudo docker system prune -f --volumes
-	@rm -f up
 
 fclean:
 	@echo "[i] Force cleaning everything..."
@@ -29,7 +33,8 @@ fclean:
 	@sudo docker volume rm $$(sudo docker volume ls -q) 2>/dev/null || true
 	@sudo docker network rm $$(sudo docker network ls -q) 2>/dev/null || true
 	@sudo docker system prune -af --volumes 2>/dev/null || true
-	@rm -f up
+	@sudo rm -rf ~/data/mariadb
+	@sudo rm -rf ~/data/wordpress
 
 re: fclean all
 
